# ros2_ws

./: .gitignore
1_7/rviz_config/: first_robot_urdf_display_model.rviz
1_7/src/autopatrol_interfaces/: CMakeLists.txt
1_7/src/autopatrol_robot/: package.xml  setup.py
1_7/src/autopatrol_robot/config/: patrol_config.yaml
1_7/src/autopatrol_robot/launch/: autopatrol.launch.py
1_7/src/demo_cpp_pkg/: CMakeLists.txt
1_7/src/demo_cpp_pkg/launch/: demo.launch.py
1_7/src/demo_cpp_pkg/src/: person_node.cpp  turtle_circle.cpp  turtle_control.cpp
1_7/src/demo_python_pkg/: package.xml
1_7/src/demo_python_pkg/demo_python_pkg/: face_detect_client_node.md  face_detect_node.py  learn_face_detect.py  test_pyttsx3.py
1_7/src/image_interfaces/: CMakeLists.txt
1_7/src/image_interfaces/srv/: FaceDetector.srv  Patrol.srv
1_7/src/robot_description/: CMakeLists.txt  package.xml
1_7/src/robot_description/launch/: gazebo_sim.launch.py
1_7/src/robot_description/urdf/: first_robot.urdf.xacro
1_7/src/robot_description/urdf/fishbot/: base.urdf.xacro  common_inertia.xacro  fishbot.ros2_control.xacro  fishbot.urdf.xacro
1_7/src/robot_description/urdf/fishbot/actuator/: caster.urdf.xacro
1_7/src/robot_description/urdf/fishbot/plugins/: gazebo_control_plugin.xacro
1_7/src/robot_description/urdf/fishbot/sensor/: camera.urdf.xacro
1_7/src/robot_description/world/: custom_room.world
1_7/src/status_interfaces/: CMakeLists.txt
1_7/src/status_interfaces/msg/: SystemStatus.msg
1_7/src/wubot_application/: package.xml
1_7/src/wubot_application/wubot_application/: get_robot_pose.py
1_7/src/wubot_navigation2/: CMakeLists.txt  package.xml
1_7/src/wubot_navigation2/maps/: room.pgm
8/learn_pluginlib/motion_control_system/: CMakeLists.txt  package.xml  spin_motion_plugins.xml
8/learn_pluginlib/motion_control_system/src/: spin_motion_controller.cpp  test_plugin.cpp
bag/rosbag2_2025_12_31-16_59_07/: metadata.yaml  rosbag2_2025_12_31-16_59_07_0.db3
rviz_config/: rviz_tf.rviz
src/autopatrol_interfaces/: CMakeLists.txt  package.xml
src/autopatrol_interfaces/srv/: SpeechText.srv
src/autopatrol_robot/: setup.py
src/autopatrol_robot/autopatrol_robot/: patrol_node.py  speaker.py
src/demo_cpp_pkg/: CMakeLists.txt  package.xml
src/demo_cpp_pkg/launch/: demo.launch.py
src/demo_cpp_pkg/src/: patrol_client.cpp  sys_status_display.cpp  tf_broadcaster_dynamic.cpp  tf_broadcaster_static.cpp  tf_listener.cpp  turtle_control.cpp
src/demo_python_pkg/: package.xml  setup.py
src/demo_python_pkg/demo_python_pkg/: face_detect_client_node.py  face_detect_node.py  novel_pub_node.py  novel_sub_node.py  person_node.py  python_node.py  static_tf_broadcaster.py  sys_status_pub.py  test_pyttsx3.py  tf_broadcaster_dynamic.py  tf_broadcaster_static.py  tf_listener.py  xiyouji.md
src/demo_python_pkg/launch/: demo.launch.py
src/image_interfaces/: CMakeLists.txt  package.xml
src/motion_control_system/: CMakeLists.txt
src/motion_control_system/include/motion_control_system/: motion_control_interface.hpp  spin_motion_controller.hpp
src/motion_control_system/src/: spin_motion_controller.cpp
src/robot_description/: CMakeLists.txt
src/robot_description/config/: fishbot_ros2_controller.yaml
src/robot_description/config/rviz/: first_robot_urdf_display_model.rviz
src/robot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
src/robot_description/urdf/: first_robot.urdf
src/robot_description/urdf/fishbot/: base.urdf.xacro  fishbot.ros2_control.xacro  fishbot.urdf.xacro
src/robot_description/urdf/fishbot/actuator/: caster.urdf.xacro  wheel.urdf.xacro
src/robot_description/urdf/fishbot/plugins/: gazebo_sensor_plugin.xacro
src/robot_description/urdf/fishbot/sensor/: camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
src/robot_description/world/: custom_room.world
src/robot_description/world/room/: model.sdf
src/status_interfaces/: package.xml
src/wubot_application/: setup.cfg  setup.py
src/wubot_application/launch/: nav.launch.py
src/wubot_application/wubot_application/: nav_to_pose.py  waypoint_follow.py
src/wubot_application_cpp/: CMakeLists.txt  package.xml
src/wubot_application_cpp/src/: nav2pose.cpp
src/wubot_navigation2/: CMakeLists.txt
src/wubot_navigation2/config/: nav2_params.yaml
src/wubot_navigation2/launch/: navigation2.launch.py
src/wubot_navigation2/maps/: room.yaml
src/wubot_navigation2/src/maps/: room.pgm  room.yaml
